--- a/app-engine-demo/musicgallery/templates/form.html
+++ b/app-engine-demo/musicgallery/templates/form.html
@@ -37,7 +37,7 @@
     <input type="file" name="image" id="image" class="form-control"/>
   </div>
 
-  <div class="form-group hidden">
+  <div class="form-group invisible">
     <label for="imageUrl">Cover Image URL</label>
     <input type="text" name="imageUrl" id="imageUrl" value="{{album.imageUrl}}" class="form-control"/>
   </div>
