--- a/app-engine-demo/musicgallery/templates/list.html
+++ b/app-engine-demo/musicgallery/templates/list.html
@@ -33,9 +33,9 @@
   <a href="/albums/{{album.id}}">
     <div class="media">
       {% if album.imageUrl %}
-        <img class="album-image img-responsive" src="{{album.imageUrl}}">
+        <img class="album-image img-fluid" src="{{album.imageUrl}}">
       {% else %}
-        <img class="album-image img-responsive" src="https://raw.githubusercontent.com/linuxacademy/appenginedeepdive/master/cloud-storage/assets/generic-LA-album.png">
+        <img class="album-image img-fluid" src="https://raw.githubusercontent.com/linuxacademy/appenginedeepdive/master/cloud-storage/assets/generic-ACG-album.png">
       {% endif %}
     </div>
     <div class="media-body">
