--- a/app-engine-demo/musicgallery/templates/base.html
+++ b/app-engine-demo/musicgallery/templates/base.html
@@ -12,7 +12,8 @@
         <div class="container">
             <div class="row">
                 <div id="acg-logo" class="col-md-4 offset-md-4">
-                    <img src="/images/ACG-logo.png" class="img-fluid" alt="A Cloud Guru Music Gallery"></br>
+                    <a href="/albums">
+                    <img src="/images/ACG-logo.png" class="img-fluid" alt="A Cloud Guru Music Gallery"></a></br>
                         <h2>Music Gallery</h2>
                 </div>
                 <div id="addAlbum" class="col-md-4">
