--- a/app-engine-demo/musicgallery/templates/base.html
+++ b/app-engine-demo/musicgallery/templates/base.html
@@ -17,7 +17,7 @@
                         <h2>Music Gallery</h2>
                 </div>
                 <div id="addAlbum" class="col-md-4">
-                    <a href="/albums">
+                    <a href="/albums/add">
                         <img src="/images/add-icon.png" alt="Add an Album">
                     </a>
                 </div>
